브랜치테스트

--- a/component.html
+++ b/component.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>컴포넌트</title>
+        <title>브랜치테스트</title>
         <link href="css/reset.css" rel="stylesheet">
         <link href="css/common.css" rel="stylesheet">
         <link href="css/component.css" rel="stylesheet">
