--- a/component.html
+++ b/component.html
@@ -26,14 +26,14 @@
                         <h2>모달 팝업</h2>
 
                         
-                        <button data-target="modal-open1" data-toggle="modal"><span>팝업 열기</span></button>
-                        <button data-target="modal-open2" data-toggle="modal"><span>팝업 열기</span></button>
+                        <button class="btn-modalOpen" data-target="modal-open1">팝업 열기</button>
+                        <button class="btn-modalOpen" data-target="modal-open2"><span>팝업 열기</span></button>
 
                         <div class="modal" id="modal-open1">
                             <div class="modal-wrap">
                                 <div class="modal-header">
                                     <h2 class="tit">팝업 타이틀</h2>
-                                    <button type="button" class="btn_modalClose" data-dismiss="modal"><i class="ico-close ico-24"><span class="blind">닫기</span></i></button>
+                                    <button type="button" class="btn-modalClose"  data-target="modal-open1"><i class="ico-close ico-24"><span class="blind">닫기</span></i></button>
                                 </div>
                                 <div class="modal-content">
                                     <p>팝업 내용</p>
@@ -41,7 +41,7 @@
                                     <img src="https://file2.nocutnews.co.kr/newsroom/image/2020/09/24/20200924213008312940_0_710_654.jpg">
                                 </div>
                                 <div class="modal-footer"> 
-                                    <button type="button" class="btn-m btn-default" data-dismiss="modal">취소</button>
+                                    <button type="button" class="btn-m btn-default btn-modalClose" data-target="modal-open1">취소</button>
                                     <button type="button" class="btn-m btn-primary" data-dismiss="modal">확인</button>
                                 </div>
                             </div>
